--- a/reservv1411/CMakeLists.txt
+++ b/reservv1411/CMakeLists.txt
@@ -25,6 +25,8 @@ add_compile_options(-Wall
 
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME} 
+    my_pico_definitions.h
+    my_pico_functions.c
     main.c
 )
 
@@ -32,10 +34,21 @@ add_executable(${PROJECT_NAME}
 pico_add_extra_outputs(${PROJECT_NAME})
 
 # Link to pico_stdlib (gpio, time, etc. functions)
-target_link_libraries(${PROJECT_NAME} 
-    pico_stdlib
+
+target_link_libraries(${PROJECT_NAME}
+
+pico_stdlib
+
+hardware_pwm
+
 )
 
 # Enable usb output, disable uart output
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
 pico_enable_stdio_uart(${PROJECT_NAME} 0)
+
+# this adds a post build command that tries to copy uf2 to Pico
+
+add_custom_command(TARGET ${PROJECT_NAME}
+
+POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.uf2 /media/dek0n/RPI-RP2/ )
