--- a/reserve/CMakeLists.txt
+++ b/reserve/CMakeLists.txt
@@ -10,7 +10,7 @@ include(${PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 set(PICO_BOARD pico_w)
 
 # Set name of project (as PROJECT_NAME) and C/C   standards
-project(blink C CXX ASM)
+project(lab_2 C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
@@ -24,23 +24,19 @@ add_compile_options(-Wall
 )
 
 # Tell CMake where to find the executable source file
-add_executable(${PROJECT_NAME} 
+add_executable(${PROJECT_NAME}
+    main.c
     my_pico_definitions.h
     my_pico_functions.c
-    main.c
 )
 
 # Create map/bin/hex/uf2 files
 pico_add_extra_outputs(${PROJECT_NAME})
 
 # Link to pico_stdlib (gpio, time, etc. functions)
-
-target_link_libraries(${PROJECT_NAME}
-
-pico_stdlib
-
-hardware_pwm
-
+target_link_libraries(${PROJECT_NAME} 
+    pico_stdlib
+    hardware_pwm
 )
 
 # Enable usb output, disable uart output
