--- a/lab_4/CMakeLists.txt
+++ b/lab_4/CMakeLists.txt
@@ -11,7 +11,7 @@ include(${PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 set(PICO_BOARD pico_w)
 
 # Set name of project (as PROJECT_NAME) and C/C   standards
-project(lab_4 C CXX ASM)
+project(my_project C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
